# auth

./: .gitignore  Cargo.toml  README.md  yarte.toml
src/: auth.rs  config.rs  database.rs  main.rs  models.rs  templates.rs  vars.rs
static/: style.css
templates/: home.hbs  invalid.hbs  login.hbs  mail.hbs  register.hbs
